Edit intro note

--- a/cam_sim.ipynb
+++ b/cam_sim.ipynb
@@ -13,7 +13,7 @@
    "id": "f6c6fa2d-09f7-481f-a0b8-a4585b87bb38",
    "metadata": {},
    "source": [
-    "This is a first stab at a camera simulator or \"digital twin\" using python. ChatGPT was used for reference and Q&A."
+    "This is a first stab at a camera simulator using python. ChatGPT was used for reference and Q&A."
    ]
   },
   {
