Added Macbeth option for a simulated scene. Currently still not working

--- a/cam_sim.ipynb
+++ b/cam_sim.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 114,
    "id": "958f016e-19cb-4e28-98f4-5a8441e05d01",
    "metadata": {
     "tags": []
@@ -26,12 +26,13 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.interpolate import RectBivariateSpline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 115,
    "id": "01e0463d",
    "metadata": {},
    "outputs": [],
@@ -41,12 +42,13 @@
     "image_width = 2048\n",
     "image_height = 2048\n",
     "exposure_time = 10  # Exposure time in seconds (?)\n",
-    "scene_type = \"Simple SpecRad\" # choose scene option"
+    "scene_type = \"Macbeth\" # choose scene option\n",
+    "mean_luminance = 100 # cd/m2. Used only for scene 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 116,
    "id": "2f9b372b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 117,
    "id": "fedbee31",
    "metadata": {},
    "outputs": [],
@@ -116,10 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 119,
    "id": "44d35043",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (4,6) (26,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb Cell 7\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m d65_illuminant \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([  \u001b[39m# Example D65 illuminant values\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     \u001b[39m94.81\u001b[39m, \u001b[39m104.80\u001b[39m, \u001b[39m105.97\u001b[39m, \u001b[39m96.16\u001b[39m, \u001b[39m113.45\u001b[39m, \u001b[39m125.40\u001b[39m, \u001b[39m132.10\u001b[39m, \u001b[39m134.19\u001b[39m, \u001b[39m131.43\u001b[39m, \u001b[39m123.91\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m     \u001b[39m113.42\u001b[39m, \u001b[39m109.83\u001b[39m, \u001b[39m107.21\u001b[39m, \u001b[39m104.87\u001b[39m, \u001b[39m103.17\u001b[39m, \u001b[39m101.48\u001b[39m, \u001b[39m100.00\u001b[39m, \u001b[39m98.93\u001b[39m, \u001b[39m98.05\u001b[39m, \u001b[39m97.33\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m     \u001b[39m96.73\u001b[39m, \u001b[39m96.19\u001b[39m, \u001b[39m95.70\u001b[39m, \u001b[39m95.22\u001b[39m, \u001b[39m94.77\u001b[39m, \u001b[39m94.34\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m ])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m \u001b[39m# Calculate the spectral radiance of the scene using the reflectance data and illuminant\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m spectral_radiance \u001b[39m=\u001b[39m reflectance_data \u001b[39m*\u001b[39m d65_illuminant\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39m# Create interpolation functions for wavelength and reflectance\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/pbecerra/Library/CloudStorage/Dropbox/code/cam_sim/cam_sim.ipynb#X14sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m interp_wavelength \u001b[39m=\u001b[39m RectBivariateSpline(np\u001b[39m.\u001b[39marange(spectral_radiance\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]), np\u001b[39m.\u001b[39marange(spectral_radiance\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]), wavelengths)\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,6) (26,) "
+     ]
+    }
+   ],
    "source": [
     "# Scene simulation\n",
     "\n",
@@ -145,6 +159,48 @@
     "    # Normalize the spectral radiance to your desired units\n",
     "    # For this example, let's assume an arbitrary normalization factor\n",
     "    scene = spectral_radiance #* 1e15  # Adjust as needed\n",
+    "\n",
+    "elif scene_type == \"Macbeth\":\n",
+    "    # Define the spectral reflectance values for the Macbeth Color Checker\n",
+    "    # These values are typically available in standard data files\n",
+    "    # For simplicity, I'll use some example reflectance values\n",
+    "    reflectance_data = np.array([\n",
+    "        [0.02, 0.04, 0.06, 0.08, 0.10, 0.12],\n",
+    "        [0.14, 0.16, 0.18, 0.20, 0.22, 0.24],\n",
+    "        [0.26, 0.28, 0.30, 0.32, 0.34, 0.36],\n",
+    "        [0.38, 0.40, 0.42, 0.44, 0.46, 0.48]\n",
+    "    ])\n",
+    "\n",
+    "# Define the spectral distribution of the D65 illuminant (in this case, a simplified version)\n",
+    "    wavelengths = np.linspace(380, 730, reflectance_data.shape[1])  # Wavelength range (nm)\n",
+    "    d65_illuminant = np.array([\n",
+    "        [94.81, 104.80, 105.97, 96.16, 113.45, 125.40],\n",
+    "        [132.10, 134.19, 131.43, 123.91, 113.42, 109.83],\n",
+    "        [107.21, 104.87, 103.17, 101.48, 100.00, 98.93],\n",
+    "        [98.05, 97.33, 96.73, 96.19, 95.70, 95.22]\n",
+    "    ])\n",
+    "\n",
+    "    # Calculate the spectral radiance of the scene using the reflectance data and illuminant\n",
+    "    spectral_radiance = reflectance_data * d65_illuminant\n",
+    "\n",
+    "    # Create interpolation functions for wavelength and reflectance\n",
+    "    interp_wavelength = RectBivariateSpline(np.arange(spectral_radiance.shape[0]), np.arange(spectral_radiance.shape[1]), wavelengths)\n",
+    "    interp_reflectance = RectBivariateSpline(np.arange(spectral_radiance.shape[0]), np.arange(spectral_radiance.shape[1]), reflectance_data)\n",
+    "\n",
+    "    # Define the new dimensions\n",
+    "    x_new = np.linspace(0, spectral_radiance.shape[0] - 1, image_height)\n",
+    "    y_new = np.linspace(0, spectral_radiance.shape[1] - 1, image_width)\n",
+    "\n",
+    "    # Perform the interpolation\n",
+    "    wavelengths_new = interp_wavelength(x_new, y_new)\n",
+    "    reflectance_new = interp_reflectance(x_new, y_new)\n",
+    "\n",
+    "    # Calculate the spectral radiance for the new dimensions\n",
+    "    spectral_radiance_new = reflectance_new * wavelengths_new\n",
+    "\n",
+    "    # Scale the spectral radiance to achieve the desired mean luminance\n",
+    "    scale_factor = mean_luminance / np.mean(spectral_radiance_new)\n",
+    "    scene = spectral_radiance_new * scale_factor\n",
     "\n",
     "else:\n",
     "    print(\"Invalid scene type provided\") "
@@ -219,6 +275,23 @@
     "    plt.imshow(scene, cmap='gray')\n",
     "\n",
     "    plt.subplot(1, 3, 3)\n",
+    "    plt.title(\"Camera Output\")\n",
+    "    plt.imshow(camera_output, cmap='gray')\n",
+    "\n",
+    "elif scene_type == \"Macbeth\":\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.title(\"Spectral Radiance (550 nm)\")\n",
+    "    plt.plot(wavelengths, scene[1, :])  # Display the radiance of the second color patch\n",
+    "    plt.xlabel(\"Wavelength (nm)\")\n",
+    "    plt.ylabel(\"Spectral Radiance (photons/sec/nm/sr/m²)\")\n",
+    "\n",
+    "    #plt.figure(figsize=(10, 5))\n",
+    "    plt.subplot(1, 3, 2)\n",
+    "    plt.title(\"Scene\")\n",
+    "    plt.imshow(scene, cmap='gray')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
     "    plt.title(\"Camera Output\")\n",
     "    plt.imshow(camera_output, cmap='gray')\n",
     "\n",
