Trying a different image

--- a/cam_sim.ipynb
+++ b/cam_sim.ipynb
@@ -33,7 +33,6 @@
    },
    "outputs": [],
    "source": [
-    "!pip install imageio\n",
     "import numpy as np\n",
     "import imageio\n",
     "import matplotlib.pyplot as plt\n",
@@ -314,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = imageio.imread(\"M2_Picture_Colorized_50ms.png\")\n",
+    "img = imageio.imread(\"Public_Square_NW_Wilkes-Barre_PA.jpeg\")\n",
     "h, w = img.shape[:-1]\n",
     "plt.imshow(img)\n",
     "img.shape"
@@ -385,8 +384,8 @@
    "source": [
     "# Visualise result of the transformation\n",
     "\n",
-    "print('pixel (100,100): , r: %s, g: %s, b: %s' % (img[100,100,0], img[100,100,1], img[100,100,2]))\n",
-    "plt.plot(dom,spectrum[100,100,:])"
+    "print('pixel (2000,2000): , r: %s, g: %s, b: %s' % (img[2000,2000,0], img[2000,2000,1], img[2000,2000,2]))\n",
+    "plt.plot(dom,spectrum[2000,2000,:])"
    ]
   },
   {
@@ -493,7 +492,7 @@
    "outputs": [],
    "source": [
     "# Use get_radiance_for to get a reasonable number of photons that hit the sensor\n",
-    "factor = np.mean(cam.get_radiance_for(255))/np.mean(spectrum)\n",
+    "factor = np.mean(cam.get_radiance_for(50))/np.mean(spectrum)\n",
     "\n",
     "# Generate simulated image and display it\n",
     "cap = cam.grab(factor * spectrum)\n",
@@ -639,7 +638,7 @@
     "width = 2048\n",
     "height = 2048\n",
     "temperature = 25\n",
-    "exposure = 50000  # in ns (I think this is wrong. It is actually in microseconds)\n",
+    "exposure = 5000  # in ns (I think this is wrong. I think it is actually in microseconds)\n",
     "K = 0.024\n",
     "blackoffset = 16315 # This is the blacklevel, which for the CMV4000 can be on the order of 16000\n",
     "dark_signal_0 = 548.7\n",
@@ -706,7 +705,24 @@
    "source": [
     "# Zoom in\n",
     "\n",
-    "plt.imshow(simulated_image[:100,:100],cmap = 'gray')"
+    "# Create a figure with two subplots (1 row, 2 columns)\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "\n",
+    "# Plot the first image on the left subplot\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.imshow(img[:200, :200])\n",
+    "plt.title('Original Image (Top Left Corner)')\n",
+    "\n",
+    "# Plot the second image on the right subplot\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.imshow(simulated_image[:200, :200], cmap='gray')\n",
+    "plt.title('Simulated Image (Top Left Corner)')\n",
+    "\n",
+    "# Adjust layout for better spacing\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
